testsuite/tests/dependent/should_fail/T15076b.stderr

T15076b.hs:8:8: error:
    • Cannot generalise type because a skolem would escape.
      When generalising this type:
        forall a (f :: forall (x :: a). Proxy @{a} x -> *).
        Proxy @{Proxy @{a} x0 -> *} (f @x0) -> ()
      these skolems would escape:
        a
      if we quantified this variable:
        (x0 :: a)
      (Indeed, I sometimes struggle even printing this correctly,
       due to its ill-scoped nature.)
    • In the type signature:
        foo :: forall (a :: Type) (f :: forall (x :: a). Proxy x -> Type).
               Proxy f -> ()
